# rag-tui

./: CLAUDE.md  CONTEXT.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-turnkey-textual-app.md  0002-progress-opt-in-via-signature-inspection.md  0003-metadata-opaque-to-the-tui.md
src/rag_tui/: __init__.py  app.py  models.py
tests/: test_app.py  test_models.py
