[project]
name = "rag-tui"
version = "0.1.0"
description = "A terminal UI for interactively querying RAG pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_tui"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
